Fix Heart Icon Not Changing Color On Mobile Devices

--- a/src/index.css
+++ b/src/index.css
@@ -185,6 +185,8 @@ align-items: center;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 255, 0.25) 0px 2px 5px -1px, rgba(66, 4, 236, 0.3) 0px 1px 3px -1px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 .vote-counter{
   font-size: 15px;
